testsuite/tests/ghci/should_run/T1400.script
:set +r
:l T1400.hs
a
a
