testsuite/tests/ghci/should_fail/T11596.script
:l T11596
:! mv T11596S.hs T11596T.hs
:r
